@@ -1,4 +1,5 @@
 - fix mis-detecting some mobile broadband modems (mga#12492)
+- log mkinitrd faillures (mga#9201)
 
 Version 16.67 - 5 March 2015
 
