@@ -1,3 +1,5 @@
+- drakboot:
+  o log mkinitrd faillures (mga#9201)
 - fix mis-detecting some mobile broadband modems (mga#12492)
 
 Version 16.66 - 5 March 2015
